@startuml

title __GalaxyBank Service's Class Diagram__\n

  database postgresql {

    }

    skinparam databaseBackgroundColor CornflowerBlue

  namespace com.galaxybank.service {
      class AdminService {
          + findATMById()
          + getAdminUser()
          + updateBalanceATM()
      }
      class CustomerService {
          + findATMById()
          + findAccountByCardId()
          + findCardById()
          + findCardByIdAndPin()
          + findTransactionsByCardId()
          + saveTransaction()
      }
  }

  com.galaxybank.service.AdminService o-- com.galaxybank.repository.AdminRepository
  com.galaxybank.service.AdminService o-- com.galaxybank.repository.AtmRepository
  com.galaxybank.service.CustomerService o-- com.galaxybank.repository.AccountRepository
  com.galaxybank.service.CustomerService o-- com.galaxybank.repository.AtmRepository
  com.galaxybank.service.CustomerService o-- com.galaxybank.repository.CardRepository

  com.galaxybank.repository.CardRepository --> postgresql
  com.galaxybank.repository.AtmRepository --> postgresql
  com.galaxybank.repository.AdminRepository --> postgresql
  com.galaxybank.repository.AccountRepository --> postgresql


@enduml
